--- a/inventoryManagementDesktopApplication/MainWindow.xaml
+++ b/inventoryManagementDesktopApplication/MainWindow.xaml
@@ -61,7 +61,11 @@
                    Grid.Row="0"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Center"
-                   ></Image>
+                   >
+            </Image>
+            <Image Source="\images\background.jpeg" Margin="-33,0,33,0"></Image>
+            <Image Source="\images\background.jpeg" Margin="112,0,-112,0"></Image>
+            <Image Source="\images\background.jpeg" Margin="177,0,-177,0"></Image>
 
             <TextBlock
             Text="Login"
